Se agregaron unos iconos para usar a futuro, se agregó el endpoint de reset al ApiClient,se corrigieron errores en el login, se agregó el perfil funcionando correctamente con sus vistas, se puede editar y cambiar la contraseña. Y cuando apretamos en el botón de "Olvidaste la contraseña?" Se resetea y vuelve a la contraseña original.