@@ -1,18 +1,13 @@
 package com.example.inmobiliariaapp.ui.login;
 
-import static android.content.Intent.FLAG_ACTIVITY_NEW_TASK;
-
 import android.app.Application;
-import android.content.Intent;
 import android.util.Log;
-import android.widget.Toast;
-
 import androidx.annotation.NonNull;
 import androidx.lifecycle.AndroidViewModel;
-
-import com.example.inmobiliariaapp.MainActivity;
+import androidx.lifecycle.LiveData;
+import androidx.lifecycle.MutableLiveData;
 import com.example.inmobiliariaapp.request.ApiClient;
-
+import okhttp3.ResponseBody;
 import retrofit2.Call;
 import retrofit2.Callback;
 import retrofit2.Response;
@@ -20,54 +15,79 @@ import retrofit2.Response;
 public class LoginViewModel extends AndroidViewModel {
 
     private static final String TAG = "LoginViewModel";
+    private final MutableLiveData<Boolean> loginSuccess = new MutableLiveData<>();
+    private final MutableLiveData<String> errorMessage = new MutableLiveData<>();
+    private final MutableLiveData<Boolean> loading = new MutableLiveData<>(false);
 
     public LoginViewModel(@NonNull Application application) {
         super(application);
     }
 
+    public LiveData<Boolean> getLoginSuccess() { return loginSuccess; }
+    public LiveData<String> getErrorMessage() { return errorMessage; }
+    public LiveData<Boolean> isLoading() { return loading; }
+
+    // REGLA 4: El ViewModel decide si el token es válido o no
+    public void verificarToken() {
+        String token = ApiClient.obtenerToken(getApplication());
+        if (token != null && !token.isEmpty()) {
+            loginSuccess.setValue(true);
+        }
+    }
+
     public void iniciarSesion(String usuario, String clave) {
-        if (usuario == null || usuario.isBlank() || clave == null || clave.isBlank()) {
-            Toast.makeText(getApplication(), "Complete todos los campos", Toast.LENGTH_LONG).show();
+        // REGLA 3: Las validaciones se hacen en el ViewModel
+        if (usuario == null || usuario.trim().isEmpty() || clave == null || clave.trim().isEmpty()) {
+            errorMessage.setValue("Debe ingresar usuario y contraseña");
             return;
         }
 
-        // Llamamos al servicio tal como lo hace el repo de tu compañero
+        loading.setValue(true);
         ApiClient.MiServicioInmobiliaria servicio = ApiClient.getServicio();
         Call<String> call = servicio.iniciarSesion(usuario, clave);
 
         call.enqueue(new Callback<String>() {
             @Override
             public void onResponse(Call<String> call, Response<String> response) {
+                loading.postValue(false);
                 if (response.isSuccessful() && response.body() != null) {
                     String token = response.body();
-                    // Guardar token usando el helper que ya tenés en ApiClient
                     ApiClient.guardarToken(getApplication(), token);
-                    Log.d(TAG, "Token: " + token);
-
-                    // Iniciar MainActivity desde el ViewModel (necesita FLAG_ACTIVITY_NEW_TASK)
-                    Intent i = new Intent(getApplication(), MainActivity.class);
-                    i.addFlags(FLAG_ACTIVITY_NEW_TASK);
-                    getApplication().startActivity(i);
+                    loginSuccess.postValue(true);
                 } else {
-                    Log.d(TAG, "Login error: " + response.code() + " - " + response.message());
-                    Toast.makeText(getApplication(), "Usuario o contraseña incorrectos", Toast.LENGTH_LONG).show();
+                    errorMessage.postValue("Usuario o contraseña incorrectos");
                 }
             }
 
             @Override
             public void onFailure(Call<String> call, Throwable t) {
-                Log.d(TAG, "onFailure: " + t.getMessage());
-                Toast.makeText(getApplication(), "Fallo del Callback: " + t.getMessage(), Toast.LENGTH_LONG).show();
+                loading.postValue(false);
+                errorMessage.postValue("Error de conexión");
             }
         });
     }
 
     public void resetPassword(String email) {
-        if (email == null || email.trim().isEmpty()) {
-            Toast.makeText(getApplication(), "Ingrese un email válido", Toast.LENGTH_LONG).show();
-            return;
-        }
-        // Implementación mínima (simulada). Reemplazar por llamada real si existe endpoint.
-        Toast.makeText(getApplication(), "Se envió un email con instrucciones (simulado)", Toast.LENGTH_LONG).show();
+        loading.setValue(true);
+        ApiClient.MiServicioInmobiliaria servicio = ApiClient.getServicio();
+        Call<ResponseBody> call = servicio.resetearPasswordFix();
+
+        call.enqueue(new Callback<ResponseBody>() {
+            @Override
+            public void onResponse(Call<ResponseBody> call, Response<ResponseBody> response) {
+                loading.postValue(false);
+                if (response.isSuccessful()) {
+                    errorMessage.postValue("Contraseña reseteada con éxito (Clave ahora es DEEKQW)");
+                } else {
+                    errorMessage.postValue("Error al resetear");
+                }
+            }
+
+            @Override
+            public void onFailure(Call<ResponseBody> call, Throwable t) {
+                loading.postValue(false);
+                errorMessage.postValue("Fallo de red");
+            }
+        });
     }
 }
